syntax = "proto3";

package chremoas.roles;

import "common.proto";

service Rules {
    rpc AddRule (Rule) returns (NilMessage) {};
    rpc RemoveRule (Rule) returns (NilMessage) {};
    rpc GetRules (NilMessage) returns (RulesList) {};
    rpc GetRule (Rule) returns (Rule) {};
}

message Rule {
    string Name = 1;
    RuleInfo Rule = 2;
}
message RuleInfo {
    string Role = 1;
    string FilterA = 2;
    string FilterB = 3;
}

message RulesList {
    repeated Rule Rules = 1;
}
